FIX: working on mobile support

--- a/packages/yaw-example/src/main.css
+++ b/packages/yaw-example/src/main.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 100.0%;
+}
+
 html, body {
     margin: 0;
     background: #000;
